fix overflow

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -20,7 +20,7 @@ html {
 }
 
 section {
-  overflow-x: hidden;
+  overflow-x: clip;
   padding-top: 8.75em;
   @media (max-width: 768px) {
       padding-top: 4em;
